--- a/WebStore.ViewModels/WebStore.ViewModels.csproj
+++ b/WebStore.ViewModels/WebStore.ViewModels.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\WebStore.Model\WebStore.Model.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
